# cache-it-all

./: .gitignore  CMakeLists.txt  README.md
distribution/: cache_stats.c  cache_stats.h  direct_mapped.c  direct_mapped.h  fully_associative.c  fully_associative.h  main_memory.c  mm_init.data  set_associative.c  set_associative.h  simple.c
distribution/tests/: custom.test  descriptions.readme  t10d.test  t10s.test  t11s.test  t12f.test  t13d.test  t13f.test  t13s.test  t14d.test  t16.test  t17f.test  t17s.test  t19.test  t2.test  t20.test  t22.test  t23.test  t24.test  t6d.test  t6f.test  t6s.test  t7s.test  t8s.test  t9f.test
distribution/tests/results_dmc/: t10f.txt  t10s.txt  t11f.txt  t12d.txt  t12f.txt  t13d.txt  t13f.txt  t14d.txt  t15.txt  t16.txt  t17d.txt  t17f.txt  t18f.txt  t19.txt  t22.txt  t23.txt  t24.txt  t3.txt  t6f.txt  t6s.txt  t7d.txt
distribution/tests/results_fac/: t10f.txt  t11f.txt  t13f.txt  t14f.txt  t16.txt  t17f.txt  t18d.txt  t18f.txt  t20.txt  t21.txt  t6d.txt  t6f.txt  t7d.txt  t7f.txt  t8d.txt  t9s.txt
distribution/tests/results_sac/: t10f.txt  t11f.txt  t12d.txt  t13f.txt  t14f.txt  t14s.txt  t17f.txt  t18f.txt  t18s.txt  t21.txt  t23.txt  t6f.txt  t7d.txt  t7f.txt  t8d.txt  t8f.txt  t8s.txt
distribution/tests/results_sc/: t10d.txt  t11d.txt  t11s.txt  t12d.txt  t13d.txt  t13f.txt  t15.txt  t17f.txt  t17s.txt  t2.txt  t21.txt  t22.txt  t3.txt  t4.txt  t5.txt  t6d.txt  t6s.txt  t7d.txt  t8d.txt  t8f.txt
src/: Makefile  direct_mapped.c  direct_mapped.h  fully_associative.h  main.c  main_memory.h  memory_block.c  memory_block.h  set_associative.c  set_associative.h  simple.h
src/tests/: descriptions.readme  t1.test  t10f.test  t11d.test  t11f.test  t12d.test  t12s.test  t14f.test  t14s.test  t15.test  t17d.test  t18d.test  t18f.test  t18s.test  t21.test  t3.test  t4.test  t5.test  t7d.test  t7f.test  t8d.test  t8f.test  t9s.test
src/tests/results_dmc/: t11d.txt  t11s.txt  t14f.txt  t17s.txt  t18d.txt  t18s.txt  t20.txt  t21.txt  t4.txt  t7f.txt  t7s.txt  t8d.txt  t8f.txt  t8s.txt  t9f.txt  t9s.txt
src/tests/results_fac/: t1.txt  t11d.txt  t11s.txt  t12f.txt  t12s.txt  t13d.txt  t13s.txt  t14s.txt  t17d.txt  t17s.txt  t19.txt  t2.txt  t24.txt  t5.txt  t7s.txt  t8f.txt  t8s.txt  t9f.txt
src/tests/results_sac/: t10d.txt  t11s.txt  t12f.txt  t12s.txt  t13s.txt  t14d.txt  t16.txt  t17s.txt  t19.txt  t20.txt  t24.txt  t6s.txt  t7s.txt  t9f.txt  t9s.txt
src/tests/results_sc/: t10f.txt  t11f.txt  t12f.txt  t13s.txt  t14d.txt  t14f.txt  t14s.txt  t16.txt  t17d.txt  t18d.txt  t18f.txt  t18s.txt  t19.txt  t20.txt  t23.txt  t24.txt  t6f.txt  t7f.txt  t7s.txt  t8s.txt  t9f.txt  t9s.txt
