cmake_minimum_required(VERSION 3.6)
project(cache_simulator)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    distribution/tests/results_dmc/t1.txt
    distribution/tests/results_dmc/t10d.txt
    distribution/tests/results_dmc/t10f.txt
    distribution/tests/results_dmc/t10s.txt
    distribution/tests/results_dmc/t11d.txt
    distribution/tests/results_dmc/t11f.txt
    distribution/tests/results_dmc/t11s.txt
    distribution/tests/results_dmc/t12d.txt
    distribution/tests/results_dmc/t12f.txt
    distribution/tests/results_dmc/t12s.txt
    distribution/tests/results_dmc/t13d.txt
    distribution/tests/results_dmc/t13f.txt
    distribution/tests/results_dmc/t13s.txt
    distribution/tests/results_dmc/t14d.txt
    distribution/tests/results_dmc/t14f.txt
    distribution/tests/results_dmc/t14s.txt
    distribution/tests/results_dmc/t15.txt
    distribution/tests/results_dmc/t16.txt
    distribution/tests/results_dmc/t17d.txt
    distribution/tests/results_dmc/t17f.txt
    distribution/tests/results_dmc/t17s.txt
    distribution/tests/results_dmc/t18d.txt
    distribution/tests/results_dmc/t18f.txt
    distribution/tests/results_dmc/t18s.txt
    distribution/tests/results_dmc/t19.txt
    distribution/tests/results_dmc/t2.txt
    distribution/tests/results_dmc/t20.txt
    distribution/tests/results_dmc/t21.txt
    distribution/tests/results_dmc/t22.txt
    distribution/tests/results_dmc/t23.txt
    distribution/tests/results_dmc/t24.txt
    distribution/tests/results_dmc/t3.txt
    distribution/tests/results_dmc/t4.txt
    distribution/tests/results_dmc/t5.txt
    distribution/tests/results_dmc/t6d.txt
    distribution/tests/results_dmc/t6f.txt
    distribution/tests/results_dmc/t6s.txt
    distribution/tests/results_dmc/t7d.txt
    distribution/tests/results_dmc/t7f.txt
    distribution/tests/results_dmc/t7s.txt
    distribution/tests/results_dmc/t8d.txt
    distribution/tests/results_dmc/t8f.txt
    distribution/tests/results_dmc/t8s.txt
    distribution/tests/results_dmc/t9f.txt
    distribution/tests/results_dmc/t9s.txt
    distribution/tests/results_fac/t1.txt
    distribution/tests/results_fac/t10d.txt
    distribution/tests/results_fac/t10f.txt
    distribution/tests/results_fac/t10s.txt
    distribution/tests/results_fac/t11d.txt
    distribution/tests/results_fac/t11f.txt
    distribution/tests/results_fac/t11s.txt
    distribution/tests/results_fac/t12d.txt
    distribution/tests/results_fac/t12f.txt
    distribution/tests/results_fac/t12s.txt
    distribution/tests/results_fac/t13d.txt
    distribution/tests/results_fac/t13f.txt
    distribution/tests/results_fac/t13s.txt
    distribution/tests/results_fac/t14d.txt
    distribution/tests/results_fac/t14f.txt
    distribution/tests/results_fac/t14s.txt
    distribution/tests/results_fac/t15.txt
    distribution/tests/results_fac/t16.txt
    distribution/tests/results_fac/t17d.txt
    distribution/tests/results_fac/t17f.txt
    distribution/tests/results_fac/t17s.txt
    distribution/tests/results_fac/t18d.txt
    distribution/tests/results_fac/t18f.txt
    distribution/tests/results_fac/t18s.txt
    distribution/tests/results_fac/t19.txt
    distribution/tests/results_fac/t2.txt
    distribution/tests/results_fac/t20.txt
    distribution/tests/results_fac/t21.txt
    distribution/tests/results_fac/t22.txt
    distribution/tests/results_fac/t23.txt
    distribution/tests/results_fac/t24.txt
    distribution/tests/results_fac/t3.txt
    distribution/tests/results_fac/t4.txt
    distribution/tests/results_fac/t5.txt
    distribution/tests/results_fac/t6d.txt
    distribution/tests/results_fac/t6f.txt
    distribution/tests/results_fac/t6s.txt
    distribution/tests/results_fac/t7d.txt
    distribution/tests/results_fac/t7f.txt
    distribution/tests/results_fac/t7s.txt
    distribution/tests/results_fac/t8d.txt
    distribution/tests/results_fac/t8f.txt
    distribution/tests/results_fac/t8s.txt
    distribution/tests/results_fac/t9f.txt
    distribution/tests/results_fac/t9s.txt
    distribution/tests/results_sac/t1.txt
    distribution/tests/results_sac/t10d.txt
    distribution/tests/results_sac/t10f.txt
    distribution/tests/results_sac/t10s.txt
    distribution/tests/results_sac/t11d.txt
    distribution/tests/results_sac/t11f.txt
    distribution/tests/results_sac/t11s.txt
    distribution/tests/results_sac/t12d.txt
    distribution/tests/results_sac/t12f.txt
    distribution/tests/results_sac/t12s.txt
    distribution/tests/results_sac/t13d.txt
    distribution/tests/results_sac/t13f.txt
    distribution/tests/results_sac/t13s.txt
    distribution/tests/results_sac/t14d.txt
    distribution/tests/results_sac/t14f.txt
    distribution/tests/results_sac/t14s.txt
    distribution/tests/results_sac/t15.txt
    distribution/tests/results_sac/t16.txt
    distribution/tests/results_sac/t17d.txt
    distribution/tests/results_sac/t17f.txt
    distribution/tests/results_sac/t17s.txt
    distribution/tests/results_sac/t18d.txt
    distribution/tests/results_sac/t18f.txt
    distribution/tests/results_sac/t18s.txt
    distribution/tests/results_sac/t19.txt
    distribution/tests/results_sac/t2.txt
    distribution/tests/results_sac/t20.txt
    distribution/tests/results_sac/t21.txt
    distribution/tests/results_sac/t22.txt
    distribution/tests/results_sac/t23.txt
    distribution/tests/results_sac/t24.txt
    distribution/tests/results_sac/t3.txt
    distribution/tests/results_sac/t4.txt
    distribution/tests/results_sac/t5.txt
    distribution/tests/results_sac/t6d.txt
    distribution/tests/results_sac/t6f.txt
    distribution/tests/results_sac/t6s.txt
    distribution/tests/results_sac/t7d.txt
    distribution/tests/results_sac/t7f.txt
    distribution/tests/results_sac/t7s.txt
    distribution/tests/results_sac/t8d.txt
    distribution/tests/results_sac/t8f.txt
    distribution/tests/results_sac/t8s.txt
    distribution/tests/results_sac/t9f.txt
    distribution/tests/results_sac/t9s.txt
    distribution/tests/results_sc/t1.txt
    distribution/tests/results_sc/t10d.txt
    distribution/tests/results_sc/t10f.txt
    distribution/tests/results_sc/t10s.txt
    distribution/tests/results_sc/t11d.txt
    distribution/tests/results_sc/t11f.txt
    distribution/tests/results_sc/t11s.txt
    distribution/tests/results_sc/t12d.txt
    distribution/tests/results_sc/t12f.txt
    distribution/tests/results_sc/t12s.txt
    distribution/tests/results_sc/t13d.txt
    distribution/tests/results_sc/t13f.txt
    distribution/tests/results_sc/t13s.txt
    distribution/tests/results_sc/t14d.txt
    distribution/tests/results_sc/t14f.txt
    distribution/tests/results_sc/t14s.txt
    distribution/tests/results_sc/t15.txt
    distribution/tests/results_sc/t16.txt
    distribution/tests/results_sc/t17d.txt
    distribution/tests/results_sc/t17f.txt
    distribution/tests/results_sc/t17s.txt
    distribution/tests/results_sc/t18d.txt
    distribution/tests/results_sc/t18f.txt
    distribution/tests/results_sc/t18s.txt
    distribution/tests/results_sc/t19.txt
    distribution/tests/results_sc/t2.txt
    distribution/tests/results_sc/t20.txt
    distribution/tests/results_sc/t21.txt
    distribution/tests/results_sc/t22.txt
    distribution/tests/results_sc/t23.txt
    distribution/tests/results_sc/t24.txt
    distribution/tests/results_sc/t3.txt
    distribution/tests/results_sc/t4.txt
    distribution/tests/results_sc/t5.txt
    distribution/tests/results_sc/t6d.txt
    distribution/tests/results_sc/t6f.txt
    distribution/tests/results_sc/t6s.txt
    distribution/tests/results_sc/t7d.txt
    distribution/tests/results_sc/t7f.txt
    distribution/tests/results_sc/t7s.txt
    distribution/tests/results_sc/t8d.txt
    distribution/tests/results_sc/t8f.txt
    distribution/tests/results_sc/t8s.txt
    distribution/tests/results_sc/t9f.txt
    distribution/tests/results_sc/t9s.txt
    distribution/tests/descriptions.readme
    distribution/tests/t1.test
    distribution/tests/t10d.test
    distribution/tests/t10f.test
    distribution/tests/t10s.test
    distribution/tests/t11d.test
    distribution/tests/t11f.test
    distribution/tests/t11s.test
    distribution/tests/t12d.test
    distribution/tests/t12f.test
    distribution/tests/t12s.test
    distribution/tests/t13d.test
    distribution/tests/t13f.test
    distribution/tests/t13s.test
    distribution/tests/t14d.test
    distribution/tests/t14f.test
    distribution/tests/t14s.test
    distribution/tests/t15.test
    distribution/tests/t16.test
    distribution/tests/t17d.test
    distribution/tests/t17f.test
    distribution/tests/t17s.test
    distribution/tests/t18d.test
    distribution/tests/t18f.test
    distribution/tests/t18s.test
    distribution/tests/t19.test
    distribution/tests/t2.test
    distribution/tests/t20.test
    distribution/tests/t21.test
    distribution/tests/t22.test
    distribution/tests/t23.test
    distribution/tests/t24.test
    distribution/tests/t3.test
    distribution/tests/t4.test
    distribution/tests/t5.test
    distribution/tests/t6d.test
    distribution/tests/t6f.test
    distribution/tests/t6s.test
    distribution/tests/t7d.test
    distribution/tests/t7f.test
    distribution/tests/t7s.test
    distribution/tests/t8d.test
    distribution/tests/t8f.test
    distribution/tests/t8s.test
    distribution/tests/t9f.test
    distribution/tests/t9s.test
    distribution/cache_stats.c
    distribution/cache_stats.h
    distribution/direct_mapped.c
    distribution/direct_mapped.h
    distribution/fully_associative.c
    distribution/fully_associative.h
    distribution/main.c
    distribution/main_memory.c
    distribution/main_memory.h
    distribution/memory_block.c
    distribution/memory_block.h
    distribution/mm_init.data
    distribution/set_associative.c
    distribution/set_associative.h
    distribution/simple.c
    distribution/simple.h)

add_executable(cache_simulator ${SOURCE_FILES})