cmake_minimum_required(VERSION 3.6)
project(cache_simulator)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
        src/tests/results_dmc/t1.txt
        src/tests/results_dmc/t10d.txt
        src/tests/results_dmc/t10f.txt
        src/tests/results_dmc/t10s.txt
        src/tests/results_dmc/t11d.txt
        src/tests/results_dmc/t11f.txt
        src/tests/results_dmc/t11s.txt
        src/tests/results_dmc/t12d.txt
        src/tests/results_dmc/t12f.txt
        src/tests/results_dmc/t12s.txt
        src/tests/results_dmc/t13d.txt
        src/tests/results_dmc/t13f.txt
        src/tests/results_dmc/t13s.txt
        src/tests/results_dmc/t14d.txt
        src/tests/results_dmc/t14f.txt
        src/tests/results_dmc/t14s.txt
        src/tests/results_dmc/t15.txt
        src/tests/results_dmc/t16.txt
        src/tests/results_dmc/t17d.txt
        src/tests/results_dmc/t17f.txt
        src/tests/results_dmc/t17s.txt
        src/tests/results_dmc/t18d.txt
        src/tests/results_dmc/t18f.txt
        src/tests/results_dmc/t18s.txt
        src/tests/results_dmc/t19.txt
        src/tests/results_dmc/t2.txt
        src/tests/results_dmc/t20.txt
        src/tests/results_dmc/t21.txt
        src/tests/results_dmc/t22.txt
        src/tests/results_dmc/t23.txt
        src/tests/results_dmc/t24.txt
        src/tests/results_dmc/t3.txt
        src/tests/results_dmc/t4.txt
        src/tests/results_dmc/t5.txt
        src/tests/results_dmc/t6d.txt
        src/tests/results_dmc/t6f.txt
        src/tests/results_dmc/t6s.txt
        src/tests/results_dmc/t7d.txt
        src/tests/results_dmc/t7f.txt
        src/tests/results_dmc/t7s.txt
        src/tests/results_dmc/t8d.txt
        src/tests/results_dmc/t8f.txt
        src/tests/results_dmc/t8s.txt
        src/tests/results_dmc/t9f.txt
        src/tests/results_dmc/t9s.txt
        src/tests/results_fac/t1.txt
        src/tests/results_fac/t10d.txt
        src/tests/results_fac/t10f.txt
        src/tests/results_fac/t10s.txt
        src/tests/results_fac/t11d.txt
        src/tests/results_fac/t11f.txt
        src/tests/results_fac/t11s.txt
        src/tests/results_fac/t12d.txt
        src/tests/results_fac/t12f.txt
        src/tests/results_fac/t12s.txt
        src/tests/results_fac/t13d.txt
        src/tests/results_fac/t13f.txt
        src/tests/results_fac/t13s.txt
        src/tests/results_fac/t14d.txt
        src/tests/results_fac/t14f.txt
        src/tests/results_fac/t14s.txt
        src/tests/results_fac/t15.txt
        src/tests/results_fac/t16.txt
        src/tests/results_fac/t17d.txt
        src/tests/results_fac/t17f.txt
        src/tests/results_fac/t17s.txt
        src/tests/results_fac/t18d.txt
        src/tests/results_fac/t18f.txt
        src/tests/results_fac/t18s.txt
        src/tests/results_fac/t19.txt
        src/tests/results_fac/t2.txt
        src/tests/results_fac/t20.txt
        src/tests/results_fac/t21.txt
        src/tests/results_fac/t22.txt
        src/tests/results_fac/t23.txt
        src/tests/results_fac/t24.txt
        src/tests/results_fac/t3.txt
        src/tests/results_fac/t4.txt
        src/tests/results_fac/t5.txt
        src/tests/results_fac/t6d.txt
        src/tests/results_fac/t6f.txt
        src/tests/results_fac/t6s.txt
        src/tests/results_fac/t7d.txt
        src/tests/results_fac/t7f.txt
        src/tests/results_fac/t7s.txt
        src/tests/results_fac/t8d.txt
        src/tests/results_fac/t8f.txt
        src/tests/results_fac/t8s.txt
        src/tests/results_fac/t9f.txt
        src/tests/results_fac/t9s.txt
        src/tests/results_sac/t1.txt
        src/tests/results_sac/t10d.txt
        src/tests/results_sac/t10f.txt
        src/tests/results_sac/t10s.txt
        src/tests/results_sac/t11d.txt
        src/tests/results_sac/t11f.txt
        src/tests/results_sac/t11s.txt
        src/tests/results_sac/t12d.txt
        src/tests/results_sac/t12f.txt
        src/tests/results_sac/t12s.txt
        src/tests/results_sac/t13d.txt
        src/tests/results_sac/t13f.txt
        src/tests/results_sac/t13s.txt
        src/tests/results_sac/t14d.txt
        src/tests/results_sac/t14f.txt
        src/tests/results_sac/t14s.txt
        src/tests/results_sac/t15.txt
        src/tests/results_sac/t16.txt
        src/tests/results_sac/t17d.txt
        src/tests/results_sac/t17f.txt
        src/tests/results_sac/t17s.txt
        src/tests/results_sac/t18d.txt
        src/tests/results_sac/t18f.txt
        src/tests/results_sac/t18s.txt
        src/tests/results_sac/t19.txt
        src/tests/results_sac/t2.txt
        src/tests/results_sac/t20.txt
        src/tests/results_sac/t21.txt
        src/tests/results_sac/t22.txt
        src/tests/results_sac/t23.txt
        src/tests/results_sac/t24.txt
        src/tests/results_sac/t3.txt
        src/tests/results_sac/t4.txt
        src/tests/results_sac/t5.txt
        src/tests/results_sac/t6d.txt
        src/tests/results_sac/t6f.txt
        src/tests/results_sac/t6s.txt
        src/tests/results_sac/t7d.txt
        src/tests/results_sac/t7f.txt
        src/tests/results_sac/t7s.txt
        src/tests/results_sac/t8d.txt
        src/tests/results_sac/t8f.txt
        src/tests/results_sac/t8s.txt
        src/tests/results_sac/t9f.txt
        src/tests/results_sac/t9s.txt
        src/tests/results_sc/t1.txt
        src/tests/results_sc/t10d.txt
        src/tests/results_sc/t10f.txt
        src/tests/results_sc/t10s.txt
        src/tests/results_sc/t11d.txt
        src/tests/results_sc/t11f.txt
        src/tests/results_sc/t11s.txt
        src/tests/results_sc/t12d.txt
        src/tests/results_sc/t12f.txt
        src/tests/results_sc/t12s.txt
        src/tests/results_sc/t13d.txt
        src/tests/results_sc/t13f.txt
        src/tests/results_sc/t13s.txt
        src/tests/results_sc/t14d.txt
        src/tests/results_sc/t14f.txt
        src/tests/results_sc/t14s.txt
        src/tests/results_sc/t15.txt
        src/tests/results_sc/t16.txt
        src/tests/results_sc/t17d.txt
        src/tests/results_sc/t17f.txt
        src/tests/results_sc/t17s.txt
        src/tests/results_sc/t18d.txt
        src/tests/results_sc/t18f.txt
        src/tests/results_sc/t18s.txt
        src/tests/results_sc/t19.txt
        src/tests/results_sc/t2.txt
        src/tests/results_sc/t20.txt
        src/tests/results_sc/t21.txt
        src/tests/results_sc/t22.txt
        src/tests/results_sc/t23.txt
        src/tests/results_sc/t24.txt
        src/tests/results_sc/t3.txt
        src/tests/results_sc/t4.txt
        src/tests/results_sc/t5.txt
        src/tests/results_sc/t6d.txt
        src/tests/results_sc/t6f.txt
        src/tests/results_sc/t6s.txt
        src/tests/results_sc/t7d.txt
        src/tests/results_sc/t7f.txt
        src/tests/results_sc/t7s.txt
        src/tests/results_sc/t8d.txt
        src/tests/results_sc/t8f.txt
        src/tests/results_sc/t8s.txt
        src/tests/results_sc/t9f.txt
        src/tests/results_sc/t9s.txt
        src/tests/descriptions.readme
        src/tests/t1.test
        src/tests/t10d.test
        src/tests/t10f.test
        src/tests/t10s.test
        src/tests/t11d.test
        src/tests/t11f.test
        src/tests/t11s.test
        src/tests/t12d.test
        src/tests/t12f.test
        src/tests/t12s.test
        src/tests/t13d.test
        src/tests/t13f.test
        src/tests/t13s.test
        src/tests/t14d.test
        src/tests/t14f.test
        src/tests/t14s.test
        src/tests/t15.test
        src/tests/t16.test
        src/tests/t17d.test
        src/tests/t17f.test
        src/tests/t17s.test
        src/tests/t18d.test
        src/tests/t18f.test
        src/tests/t18s.test
        src/tests/t19.test
        src/tests/t2.test
        src/tests/t20.test
        src/tests/t21.test
        src/tests/t22.test
        src/tests/t23.test
        src/tests/t24.test
        src/tests/t3.test
        src/tests/t4.test
        src/tests/t5.test
        src/tests/t6d.test
        src/tests/t6f.test
        src/tests/t6s.test
        src/tests/t7d.test
        src/tests/t7f.test
        src/tests/t7s.test
        src/tests/t8d.test
        src/tests/t8f.test
        src/tests/t8s.test
        src/tests/t9f.test
        src/tests/t9s.test
        src/cache_stats.c
        src/cache_stats.h
        src/direct_mapped.c
        src/direct_mapped.h
        src/fully_associative.c
        src/fully_associative.h
        src/main.c
        src/main_memory.c
        src/main_memory.h
        src/memory_block.c
        src/memory_block.h
        src/mm_init.data
        src/set_associative.c
        src/set_associative.h
        src/simple.c
        src/simple.h)

add_executable(cache_simulator ${SOURCE_FILES})